Bug 162994 - picasa album list does not contain "not listed" albums, contains only "public" albums
Summary: picasa album list does not contain "not listed" albums, contains only "public...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Google (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-01 15:45 UTC by Philippe ROUBACH
Modified: 2018-03-23 12:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2008-06-01 15:45:24 UTC
Version:            (using KDE 3.5.9)
OS:                Linux

Mandriva 2008.1 
 digikam 9.3 
 libkipi 0.1.5 
 
i launch digikam
then
i launch picasawebexport
then
in the album list i only see the public albums
Comment 1 Vardhman 2008-06-06 17:27:38 UTC
SVN commit 817676 by jaiva:

Added listAllAlbums() replacing listAlbums() which now uses authenticated call to fetch the list of all albums for the user including the unlisted albums.

BUG:162994


 M  +9 -7      picasawebtalker.cpp  
 M  +1 -1      picasawebtalker.h  
 M  +2 -2      picasawebwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=817676
Comment 2 Philippe ROUBACH 2008-11-14 11:26:21 UTC
i get the tarballs

libdcraw-0.1.6
libkexif-0.2.5
libkexif2-0.1.7
libkipi-0.1.6

i compiled and install all with

./configure
make
su -c "make install"

i get kipi-plugins 0.1.7 with

svn co -N svn://anonsvn.kde.org/home/kde/branches/extragear/kde3/libs
cd libs
svn co svn://anonsvn.kde.org/home/kde/branches/extragear/kde3/libs/kipi-plugins

i compiled and installed with

export UNSERMAKE=no 
make -f Makefile.cvs
./configure --prefix=/usr
make
su -c "make install"

i checked when using that picasaweb export is 1.7 version

result :

- it does not list my albums neither public or private ones
- if i click on "upload" digikam crashes
Comment 3 caulier.gilles 2008-11-14 11:33:30 UTC
Hum, here, plugin do not crash and work fine. Can you give us a GDB backtrace ?

Look here for details: http://www.digikam.org/drupal/contrib

Gilles Caulier
Comment 4 Philippe ROUBACH 2008-11-14 11:43:22 UTC
yes

but

how ?

Comment 5 caulier.gilles 2008-11-14 12:13:16 UTC
Look section "If you are experiencing crashes with digiKam" at page 

http://www.digikam.org/drupal/contrib

Gilles Caulier
Comment 6 Philippe ROUBACH 2008-11-14 16:34:42 UTC
1. i get the 9.4 tarball
2. i get and applied

digikam-0.9.4-libkdcraw.patch

3. i compiled and installed with

make -f Makefile.cvs
./configure --prefix=/usr --enable-debug=all
make
su -c "make install"

4.
 i launched digikam with
***************************************************************
[roubach@localhost ~]$ gdb digikam
GNU gdb 6.6-5.1mdv2008.1 (Mandriva Linux release 2008.1)
Copyright (C) 2006 Free Software Foundation, Inc.
GDB is free software, covered by the GNU General Public License, and you are
welcome to change it and/or distribute copies of it under certain conditions.
Type "show copying" to see the conditions.
There is absolutely no warranty for GDB.  Type "show warranty" for details.
This GDB was configured as ""...
Using host libthread_db library "/lib/i686/libthread_db.so.1".
(gdb) run
Starting program: /usr/bin/digikam
****************************************************************************

i selected a photo
i launch the picasaweb export
i open a connexion by filling the template
i choose to create an album then "startuploading"

see trace :
******************************************************************************
digikam: Found JPEGLossless plugin
KIPI (loading): Kipi-plugins - Picasaweb Export  - Kipi-plugins 0.1.7

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread -1255515936 (LWP 25433)]
0xb38d2e80 in KIPIPicasawebExportPlugin::PicasawebWindow::slotAddPhotoNext ()
   from /usr/lib/kde3/kipiplugin_picasawebexport.so
Current language:  auto; currently c
(gdb) bt
#0  0xb38d2e80 in KIPIPicasawebExportPlugin::PicasawebWindow::slotAddPhotoNext
    () from /usr/lib/kde3/kipiplugin_picasawebexport.so
#1  0xb38d3ea9 in KIPIPicasawebExportPlugin::PicasawebWindow::slotUploadImages
    () from /usr/lib/kde3/kipiplugin_picasawebexport.so
#2  0xb38d401f in KIPIPicasawebExportPlugin::PicasawebWindow::qt_invoke ()
   from /usr/lib/kde3/kipiplugin_picasawebexport.so
#3  0xb60982ea in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#4  0xb6098f4a in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#5  0xb63c747a in QButton::clicked () from /usr/lib/qt3/lib/libqt-mt.so.3
#6  0xb612e30c in QButton::mouseReleaseEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#7  0xb60d292f in QWidget::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#8  0xb6038438 in QApplication::internalNotify ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#9  0xb60394e8 in QApplication::notify () from /usr/lib/qt3/lib/libqt-mt.so.3
#10 0xb680be6a in KApplication::notify () from /usr/lib/libkdecore.so.4
#11 0xb5fd5d8a in QETWidget::translateMouseEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#12 0xb5fd498d in QApplication::x11ProcessEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#13 0xb5fe5629 in QEventLoop::processEvents ()
---Type <return> to continue, or q <return> to quit---   
***************************************************************

the window of picasaweb export is frosen
kde ask to me if i want to terminate or to let running the app when i try to close the window
then
i answer "terminate"
then
digikam disappears

           
Comment 7 caulier.gilles 2008-11-14 17:43:29 UTC
PicaseWeb kipi-plugin is linked with libkdcraw. if you update this library, you need to recompile and install kipi-plugins too...

Gilles Caulier
Comment 8 caulier.gilles 2008-11-14 17:58:50 UTC
Note : don't need to use digiKam 0.9.4 + patch to recompile it with last libkdcraw. Use last 0.9.5-beta1 code which compile fine with this version of libkdcraw. There are also a lots of bugfixes and improvements. Look here for details:

http://www.digikam.org/drupal/node/383

Gilles Caulier
Comment 9 Philippe ROUBACH 2008-11-14 18:10:06 UTC
i recompiled and reinstalled kipi-plugins 1.7

same pb

- no album list
- crashes when "start uploading"

see kde log
*****************************************************************************
Using host libthread_db library "/lib/i686/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1255458592 (LWP 26132)]
[KCrash handler]
#6  0xb38e0e80 in KIPIPicasawebExportPlugin::PicasawebWindow::slotAddPhotoNext
    () from /usr/lib/kde3/kipiplugin_picasawebexport.so
#7  0xb38e1ea9 in KIPIPicasawebExportPlugin::PicasawebWindow::slotUploadImages
    () from /usr/lib/kde3/kipiplugin_picasawebexport.so
#8  0xb38e201f in KIPIPicasawebExportPlugin::PicasawebWindow::qt_invoke ()
   from /usr/lib/kde3/kipiplugin_picasawebexport.so
#9  0xb60a62ea in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#10 0xb60a6f4a in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#11 0xb63d547a in QButton::clicked () from /usr/lib/qt3/lib/libqt-mt.so.3
#12 0xb613c30c in QButton::mouseReleaseEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#13 0xb60e092f in QWidget::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#14 0xb6046438 in QApplication::internalNotify ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#15 0xb60474e8 in QApplication::notify () from /usr/lib/qt3/lib/libqt-mt.so.3
#16 0xb6819e6a in KApplication::notify () from /usr/lib/libkdecore.so.4
#17 0xb5fe3d8a in QETWidget::translateMouseEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#18 0xb5fe298d in QApplication::x11ProcessEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#19 0xb5ff3629 in QEventLoop::processEvents ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#20 0xb605ce37 in QEventLoop::enterLoop () from /usr/lib/qt3/lib/libqt-mt.so.3
#21 0xb605ccd4 in QEventLoop::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#22 0xb604607c in QApplication::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#23 0x0804af88 in main (argc=-1208509012, argv=0xb556d722) at main.cpp:348
*******************************************************************************
Comment 10 Philippe ROUBACH 2008-11-14 18:46:55 UTC
same pb with 9.5b1

- it does not list the album
- digikam crashes when "start uploading"

***********************************************************************
Using host libthread_db library "/lib/i686/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1254831792 (LWP 17288)]
[KCrash handler]
#6  0xb3977e80 in KIPIPicasawebExportPlugin::PicasawebWindow::slotAddPhotoNext
    () from /usr/lib/kde3/kipiplugin_picasawebexport.so
#7  0xb3978ea9 in KIPIPicasawebExportPlugin::PicasawebWindow::slotUploadImages
    () from /usr/lib/kde3/kipiplugin_picasawebexport.so
#8  0xb397901f in KIPIPicasawebExportPlugin::PicasawebWindow::qt_invoke ()
   from /usr/lib/kde3/kipiplugin_picasawebexport.so
#9  0xb613f2ea in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#10 0xb613ff4a in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#11 0xb646e47a in QButton::clicked () from /usr/lib/qt3/lib/libqt-mt.so.3
#12 0xb61d530c in QButton::mouseReleaseEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#13 0xb617992f in QWidget::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#14 0xb60df438 in QApplication::internalNotify ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#15 0xb60e04e8 in QApplication::notify () from /usr/lib/qt3/lib/libqt-mt.so.3
#16 0xb68b2e6a in KApplication::notify () from /usr/lib/libkdecore.so.4
#17 0xb607cd8a in QETWidget::translateMouseEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#18 0xb607b98d in QApplication::x11ProcessEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#19 0xb608c629 in QEventLoop::processEvents ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#20 0xb60f5e37 in QEventLoop::enterLoop () from /usr/lib/qt3/lib/libqt-mt.so.3
#21 0xb60f5cd4 in QEventLoop::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#22 0xb60df07c in QApplication::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#23 0x0804aac8 in main ()
*****************************************************************************
Comment 11 Philippe ROUBACH 2008-11-15 09:16:27 UTC
(In reply to comment #7)
> PicaseWeb kipi-plugin is linked with libkdcraw. if you update this library, you
> need to recompile and install kipi-plugins too...
> 
> Gilles Caulier
> 

yes but how to say to gcc please compile kipi-plugins 1.7 (which is in ~/../kipi-plugins-0.1.7/) with the new libkdcraw (which is in ~/../libkdcraw-0.1.6/) ?

Comment 12 Philippe ROUBACH 2008-11-15 13:44:03 UTC
i discovered an interesting thing :

when i first used picasaweb i create a count with :

id : <name>@free.fr
password : <my password>

then

later

with my google count

i activated and explored the google tool gmail then google created
a new mail address  <first name>.<last name>@gmail.com

i don't use gmail address and i don't use it to connect to google

i use picasaweb and picasa soft with
id : <name>@free.fr
password : <my password>

this works well

now what happens with picasawebexport ?

if i use
id : <name>@free.fr
password : <my password>

picaswebexport does not list my album and freeze or crash if use "start uploading"

if i use

id : <first name>.<last name>@gmail.com
pwd : <password2>

picasawebexport lists all my albums and i can upload a photo but not a video

Comment 13 caulier.gilles 2008-11-15 15:55:56 UTC
To comment #7:

When you run .configure script, it scan libkdcraw on your system. Look like you have an option to pass a path when libkdcraw is...

To Comment #8:

It sound very interresting. Perhaps Jain (plugin maintainer) has an explication about that, since he work to Google (:=)))

Gilles Caulier

Comment 14 caulier.gilles 2008-11-15 22:31:29 UTC
Philipe. 

I just backported changes from Jain make in trunk to KDE3 branch. Please checkout code, recompile, install, and test it

Thanks in advance

Gilles Caulier
Comment 15 Philippe ROUBACH 2008-11-15 22:49:50 UTC
what software ?

digikam
or
kipi-plugins ?
Comment 16 Philippe ROUBACH 2008-11-16 12:00:47 UTC
what do you backport for what bug ?

i got, compiled and installed svn digikam (libs, graphics) and kipi-plugins
Comment 17 caulier.gilles 2008-12-08 08:53:57 UTC
Philippe,

This file still valid using kipi-plugins 0.1.6 ?

Gilles Caulier
Comment 18 Philippe ROUBACH 2008-12-08 14:28:01 UTC
mandriva 2008.1
digikam 9.5b2
kipi-plugins 0.1.6

no more pb
Comment 19 caulier.gilles 2008-12-08 16:04:16 UTC
Thanks for the report.
I close this file now.

Gilles Caulier