Added listAllAlbums() replacing listAlbums() which now uses authenticated call to fetch the list of all albums for the user including the unlisted albums.

BUG:162994

svn path=/branches/extragear/kde3/libs/kipi-plugins/; revision=817676